# Project_API-tests

./: README.md  pyproject.toml
schemas/: petstore.py
tests/: conftest.py  test_petstore.py
utils/: base_session.py  helpers.py  sessions.py
